# neoarchlinux.org

./: .dockerignore  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  test.env
db/migrations/: 001_create_repos.sql  002_create_arches.sql  003_create_packages.sql  004_create_users.sql  005_create_package_versions.sql  006_create_package_history.sql  007_create_upload_tokens.sql  010_create_package_meta.sql  011_alter_package_meta.sql  012_create_components.sql  013_create_relations.sql  014_create_file_classification.sql
docker/: iso-builder.Dockerfile  package-updater.Dockerfile  php.Dockerfile
iso/arch-based/: iso.pacman.conf  pacman.conf
iso/artix-based/: iso.pacman.conf  pacman.conf
iso/profile/: iso.pacman.conf  pacman.conf
iso/profile/grub/: grub.cfg  loopback.cfg
nginx/: error.nginx.conf  nginx.conf  nginx.test.conf
package-updater/: Cargo.toml
package-updater/src/: main.rs
public/: index.css
routes/docs/: index.md  index.php  installation-guide.php  router.php
routes/docs/general/: index.md  install-guide.md
routes/docs/napm/: files.md  find.md  index.md  info.md  install.md  list.md  (+4 more)
routes/home/: index.php
routes/iso/: build.php  index.php
scripts/: docker-php-entrypoint.sh  iso-builder.py  update-packages.sh
scripts/package-updater/: classify-conf.sh  classify-elfbin.sh  classify-pacman-hook.sh  classify-script.sh  docker-entrypoint.sh  sync-repos.sh  update-files.sh  update-packages.sh
src/: config.php  db.php  error.php  header.php  security.php  storage.php  utils.php
src/mirrors/: directory_index.php
(+4 files in other folders)
