[package]
name = "package-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
